--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,28 @@
             "email": "mark.ladoux@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "nyholm/psr7": "^1.3",
+        "nyholm/psr7-server": "^1.0",
+        "php-di/php-di": "^6.2",
+        "selective/basepath": "^1.0",
+        "slim/slim": "^4"
+    },
+    "require-dev": {
+        "pds/skeleton": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/App/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Test\\": "tests/"
+        }
+    },
+    "config": {
+        "process-timeout": 0,
+        "sort-packages": true
+    }
 }
