--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "monolog/monolog": "^2.1",
         "nyholm/psr7": "^1.3",
         "nyholm/psr7-server": "^1.0",
         "php-di/php-di": "^6.2",
