--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "nyholm/psr7-server": "^1.0",
         "php-di/php-di": "^6.2",
         "selective/basepath": "^1.0",
-        "slim/slim": "^4"
+        "slim/slim": "^4",
+        "slim/twig-view": "^3.1"
     },
     "require-dev": {
         "pds/skeleton": "^1.0"
