implement session management

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "php-di/php-di": "^6.2",
         "selective/basepath": "^1.0",
         "slim/slim": "^4",
-        "slim/twig-view": "^3.1"
+        "slim/twig-view": "^3.1",
+        "symfony/http-foundation": "^5.1"
     },
     "require-dev": {
         "pds/skeleton": "^1.0"
