--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "doctrine/dbal": "^2.10",
         "monolog/monolog": "^2.1",
         "nyholm/psr7": "^1.3",
         "nyholm/psr7-server": "^1.0",
