--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "symfony/http-foundation": "^5.1"
     },
     "require-dev": {
-        "pds/skeleton": "^1.0"
+        "pds/skeleton": "^1.0",
+        "phpunit/phpunit": "^9.3"
     },
     "autoload": {
         "psr-4": {
@@ -36,5 +37,9 @@
     "config": {
         "process-timeout": 0,
         "sort-packages": true
+    },
+    "scripts": {
+        "test": "phpunit --configuration phpunit.xml",
+        "test:coverage": "phpunit --configuration phpunit.xml --coverage-clover build/logs/clover.xml --coverage-html build/coverage"
     }
 }
